--- a/back-end/package.json
+++ b/back-end/package.json
@@ -14,6 +14,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
     "mongoose": "^5.10.5",
+    "multer": "^1.4.2",
+    "shortid": "^2.2.15",
     "slugify": "^1.4.5"
   },
   "devDependencies": {
